[gd_scene load_steps=4 format=3 uid="uid://7jpo0gk6b183"]

[ext_resource type="Script" path="res://comps/scripts/show_effect.gd" id="1_13pb6"]
[ext_resource type="Texture2D" uid="uid://6r4132ur6tgw" path="res://graphics/sprites/dividendo.png" id="2_pm5ha"]
[ext_resource type="Texture2D" uid="uid://xmnkosys2es2" path="res://graphics/sprites/pagando.png" id="3_d3vqf"]

[node name="ShowEffect" type="Node3D"]
script = ExtResource("1_13pb6")

[node name="divida" type="Sprite3D" parent="."]
visible = false
billboard = 1
texture = ExtResource("2_pm5ha")

[node name="pagar" type="Sprite3D" parent="."]
visible = false
billboard = 1
texture = ExtResource("3_d3vqf")

[node name="PagarTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="PagarTimer" to="." method="_on_pagar_timer_timeout"]
